# SimpleSQLite

./: .gitignore  CMakeLists.txt  InputBuffer.c  InputBuffer.h  Makefile  README.md  main.c
compiler/: Tokenizer.c  Tokenizer.h
core/: CommandProcessor.c  CommandProcessor.h  InputBuffer.c  InputBuffer.h  VirtualMachine.c  VirtualMachine.h
utility/: BTree.h
